added project, a bunch of scripts, and haven't totally worked on IOT yet
