# openapi.json
@@ -3,13 +3,225 @@
   "info" : {
     "title" : "SWARM API",
     "description" : "API for the SWARM project. FAU CEN4214 2019F",
-    "version" : "v0"
+    "version" : "v0.0.0"
   },
   "servers" : [ {
-    "url" : "http://swarm-fau4214.eastus.cloudapp.azure.com:6969/api/v0",
+    "url" : "http://localhost:6969/api/v0",
     "description" : "Azure VM"
   } ],
   "paths" : {
+    "/authorization" : {
+      "get" : {
+        "tags" : [ "Authorization" ],
+        "description" : "Read information about a bunch of authorizations",
+        "parameters" : [ {
+          "name" : "offset",
+          "in" : "query",
+          "description" : "number of records to offset",
+          "required" : false,
+          "style" : "form",
+          "explode" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        }, {
+          "name" : "limit",
+          "in" : "query",
+          "description" : "max number of records to return",
+          "required" : false,
+          "style" : "form",
+          "explode" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "all of the authorizations",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "allOf" : [ {
+                    "$ref" : "#/components/schemas/API-Response"
+                  }, {
+                    "properties" : {
+                      "data" : {
+                        "type" : "array",
+                        "items" : {
+                          "$ref" : "#/components/schemas/Authorization"
+                        }
+                      }
+                    }
+                  } ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "post" : {
+        "tags" : [ "Authorization" ],
+        "description" : "Create a new devce",
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/Authorization"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "successfully registered authorization",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "allOf" : [ {
+                    "$ref" : "#/components/schemas/API-Response"
+                  }, {
+                    "properties" : {
+                      "data" : {
+                        "$ref" : "#/components/schemas/Authorization"
+                      }
+                    }
+                  } ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/authorization/{id}" : {
+      "get" : {
+        "tags" : [ "Authorization" ],
+        "description" : "Read one authorization by ID",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "one of the authorizations",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "allOf" : [ {
+                    "$ref" : "#/components/schemas/API-Response"
+                  }, {
+                    "properties" : {
+                      "data" : {
+                        "type" : "array",
+                        "items" : {
+                          "$ref" : "#/components/schemas/Authorization"
+                        }
+                      }
+                    }
+                  } ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "put" : {
+        "tags" : [ "Authorization" ],
+        "description" : "Update one authorization by ID",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/Authorization"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "successfully updated authorization",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "allOf" : [ {
+                    "$ref" : "#/components/schemas/API-Response"
+                  }, {
+                    "properties" : {
+                      "data" : {
+                        "type" : "array",
+                        "items" : {
+                          "$ref" : "#/components/schemas/Authorization"
+                        }
+                      }
+                    }
+                  } ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete" : {
+        "tags" : [ "Authorization" ],
+        "description" : "Delete one authorization by ID",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successfully deleted authorization",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "allOf" : [ {
+                    "$ref" : "#/components/schemas/API-Response"
+                  }, {
+                    "properties" : {
+                      "data" : {
+                        "type" : "array",
+                        "items" : {
+                          "$ref" : "#/components/schemas/Authorization"
+                        }
+                      }
+                    }
+                  } ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/device" : {
       "get" : {
         "tags" : [ "Device" ],
@@ -222,7 +434,7 @@
         }
       }
     },
-    "/raw_data" : {
+    "/raw-data" : {
       "get" : {
         "tags" : [ "Raw-Data" ],
         "description" : "Read information about a bunch of raw-datas",
@@ -309,7 +521,7 @@
         }
       }
     },
-    "/raw_data/{id}" : {
+    "/raw-data/{id}" : {
       "get" : {
         "tags" : [ "Raw-Data" ],
         "description" : "Read one raw-data by ID",
@@ -423,6 +635,218 @@
                         "type" : "array",
                         "items" : {
                           "$ref" : "#/components/schemas/Raw-Data"
+                        }
+                      }
+                    }
+                  } ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/project" : {
+      "get" : {
+        "tags" : [ "Project" ],
+        "description" : "Read information about a bunch of projects",
+        "parameters" : [ {
+          "name" : "offset",
+          "in" : "query",
+          "description" : "number of records to offset",
+          "required" : false,
+          "style" : "form",
+          "explode" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        }, {
+          "name" : "limit",
+          "in" : "query",
+          "description" : "max number of records to return",
+          "required" : false,
+          "style" : "form",
+          "explode" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "all of the projects",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "allOf" : [ {
+                    "$ref" : "#/components/schemas/API-Response"
+                  }, {
+                    "properties" : {
+                      "data" : {
+                        "type" : "array",
+                        "items" : {
+                          "$ref" : "#/components/schemas/Project"
+                        }
+                      }
+                    }
+                  } ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "post" : {
+        "tags" : [ "Project" ],
+        "description" : "Create a new devce",
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/Project"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "successfully registered project",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "allOf" : [ {
+                    "$ref" : "#/components/schemas/API-Response"
+                  }, {
+                    "properties" : {
+                      "data" : {
+                        "$ref" : "#/components/schemas/Project"
+                      }
+                    }
+                  } ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/project/{id}" : {
+      "get" : {
+        "tags" : [ "Project" ],
+        "description" : "Read one project by ID",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "one of the projects",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "allOf" : [ {
+                    "$ref" : "#/components/schemas/API-Response"
+                  }, {
+                    "properties" : {
+                      "data" : {
+                        "type" : "array",
+                        "items" : {
+                          "$ref" : "#/components/schemas/Project"
+                        }
+                      }
+                    }
+                  } ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "put" : {
+        "tags" : [ "Project" ],
+        "description" : "Update one project by ID",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/Project"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "successfully updated project",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "allOf" : [ {
+                    "$ref" : "#/components/schemas/API-Response"
+                  }, {
+                    "properties" : {
+                      "data" : {
+                        "type" : "array",
+                        "items" : {
+                          "$ref" : "#/components/schemas/Project"
+                        }
+                      }
+                    }
+                  } ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete" : {
+        "tags" : [ "Project" ],
+        "description" : "Delete one project by ID",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "style" : "simple",
+          "explode" : false,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successfully deleted project",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "allOf" : [ {
+                    "$ref" : "#/components/schemas/API-Response"
+                  }, {
+                    "properties" : {
+                      "data" : {
+                        "type" : "array",
+                        "items" : {
+                          "$ref" : "#/components/schemas/Project"
                         }
                       }
                     }
@@ -672,9 +1096,12 @@
           }
         }
       },
-      "Dated-Object" : {
+      "Document" : {
         "type" : "object",
         "properties" : {
+          "id" : {
+            "type" : "string"
+          },
           "date_created" : {
             "type" : "string",
             "format" : "date-time"
@@ -685,10 +1112,22 @@
           }
         }
       },
+      "Authorization" : {
+        "type" : "object",
+        "allOf" : [ {
+          "$ref" : "#/components/schemas/Document"
+        }, {
+          "properties" : {
+            "name" : {
+              "type" : "string"
+            }
+          }
+        } ]
+      },
       "Raw-Data" : {
         "type" : "object",
         "allOf" : [ {
-          "$ref" : "#/components/schemas/Dated-Object"
+          "$ref" : "#/components/schemas/Document"
         }, {
           "properties" : {
             "raw" : {
@@ -703,17 +1142,32 @@
       "Device" : {
         "type" : "object",
         "allOf" : [ {
-          "$ref" : "#/components/schemas/Dated-Object"
+          "$ref" : "#/components/schemas/Document"
         }, {
           "properties" : {
-            "id" : {
-              "type" : "string"
-            },
             "name" : {
               "type" : "string"
             },
-            "meta_data" : {
+            "project" : {
+              "type" : "string"
+            },
+            "meta" : {
               "type" : "object"
+            }
+          }
+        } ]
+      },
+      "Project" : {
+        "type" : "object",
+        "allOf" : [ {
+          "$ref" : "#/components/schemas/Document"
+        }, {
+          "properties" : {
+            "description" : {
+              "type" : "string"
+            },
+            "img" : {
+              "type" : "string"
             }
           }
         } ]
@@ -721,7 +1175,7 @@
       "User" : {
         "type" : "object",
         "allOf" : [ {
-          "$ref" : "#/components/schemas/Dated-Object"
+          "$ref" : "#/components/schemas/Document"
         }, {
           "properties" : {
             "first_name" : {
@@ -736,6 +1190,15 @@
             },
             "password" : {
               "type" : "string"
+            },
+            "authorization" : {
+              "type" : "object",
+              "additionalProperties" : {
+                "type" : "array",
+                "items" : {
+                  "type" : "string"
+                }
+              }
             }
           }
         } ]
